# photon-bar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  run.sh
src/: charset.cpp  charset.hpp  color.hpp  event.hpp  main.cpp
src/opengl/: instance.hpp
src/utils/: janitor.hpp  reflection.hpp  semantic.hpp  traits.hpp  utils.hpp
src/wayland/: instance.cpp  instance.hpp  window.cpp  window.hpp
vendors/glad/: CMakeLists.txt
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
vendors/wlr-layer-shell-unstable-v1/: CMakeLists.txt
vendors/wlr-layer-shell-unstable-v1/cmake/: replace.cmake
vendors/xdg-shell/: CMakeLists.txt
